# face-swapper

./: notes.txt  pyproject.toml
src/face_swapper/: config.py  model.py  webcam_example.py
